deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postfacto
  labels:
    app.kubernetes.io/name: postfacto
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: postfacto
  template:
    metadata:
      labels:
        app.kubernetes.io/name: postfacto
        version: main
    spec:
      containers:
        - name: postfacto
          image: postfacto/postfacto:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          resources:
            requests:
              memory: 0.5Gi
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            timeoutSeconds: 10
            failureThreshold: 9
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 40
            timeoutSeconds: 2
            periodSeconds: 8
            failureThreshold: 3
