redis-helm.yaml
# Source: postfacto/charts/redis/templates/headless-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: postfacto-redis-headless
  labels:
    app: redis
    chart: redis-9.4.3
    release: postfacto
    heritage: Helm
spec:
  type: ClusterIP
  clusterIP: None
  ports:
  - name: redis
    port: 6379
    targetPort: redis
  selector:
    app: redis
    release: postfacto
---
# Source: postfacto/charts/redis/templates/redis-master-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: postfacto-redis-master
  labels:
    app: redis
    chart: redis-9.4.3
    release: postfacto
    heritage: Helm
spec:
  type: ClusterIP
  ports:
  - name: redis
    port: 6379
    targetPort: redis
  selector:
    app: redis
    release: postfacto
    role: master
---
# Source: postfacto/charts/redis/templates/redis-master-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postfacto-redis-master
  labels:
    app: redis
    chart: redis-9.4.3
    release: postfacto
    heritage: Helm
spec:
  selector:
    matchLabels:
      app: redis
      release: postfacto
      role: master
  serviceName: postfacto-redis-headless
  template:
    metadata:
      labels:
        app: redis
        chart: redis-9.4.3
        release: postfacto
        role: master
      annotations:
        checksum/health: 9b19e7f9713fc4999f3fa27608f93bea5fecbdd0a2f69f9aae0941f3af2afdcf
        checksum/configmap: d092ab66556c37e718e0c0c8db0e517fa0b4119413eb87e4335b2d05d4375a1a
        checksum/secret: 044dd050b75985892f89d8f97bd42bc8c5d756735d481940fbe4c41283e76d27
    spec:      
      securityContext:
        fsGroup: 1001
      serviceAccountName: "default"
      containers:
      - name: postfacto-redis
        image: "docker.io/bitnami/redis:5.0.5-debian-9-r169"
        imagePullPolicy: "IfNotPresent"
        securityContext:
          runAsUser: 1001
        command:
        - /bin/bash
        - -c
        - |
          if [[ -n $REDIS_PASSWORD_FILE ]]; then
            password_aux=`cat ${REDIS_PASSWORD_FILE}`
            export REDIS_PASSWORD=$password_aux
          fi
          if [[ ! -f /opt/bitnami/redis/etc/master.conf ]];then
            cp /opt/bitnami/redis/mounted-etc/master.conf /opt/bitnami/redis/etc/master.conf
          fi
          if [[ ! -f /opt/bitnami/redis/etc/redis.conf ]];then
            cp /opt/bitnami/redis/mounted-etc/redis.conf /opt/bitnami/redis/etc/redis.conf
          fi
          ARGS=("--port" "${REDIS_PORT}")
          ARGS+=("--requirepass" "${REDIS_PASSWORD}")
          ARGS+=("--masterauth" "${REDIS_PASSWORD}")
          ARGS+=("--include" "/opt/bitnami/redis/etc/redis.conf")
          ARGS+=("--include" "/opt/bitnami/redis/etc/master.conf")
          /run.sh ${ARGS[@]}
        ports:
        - name: redis
          containerPort: 6379
        livenessProbe:
          initialDelaySeconds: 5
          periodSeconds: 5
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 5
          exec:
            command:
            - sh
            - -c
            - /health/ping_liveness_local.sh 5
        readinessProbe:
          initialDelaySeconds: 5
          periodSeconds: 5
          timeoutSeconds: 1
          successThreshold: 1
          failureThreshold: 5
          exec:
            command:
            - sh
            - -c
            - /health/ping_readiness_local.sh 5
        resources:
          null
        volumeMounts:
        - name: health
          mountPath: /health
        - name: redis-data
          mountPath: /data
          subPath: 
        - name: config
          mountPath: /opt/bitnami/redis/mounted-etc
        - name: redis-tmp-conf
          mountPath: /opt/bitnami/redis/etc/
      volumes:
      - name: health
        configMap:
          name: postfacto-redis-health
          defaultMode: 0755
      - name: config
        configMap:
          name: postfacto-redis
      - name: redis-tmp-conf
        emptyDir: {}
  volumeClaimTemplates:
    - metadata:
        name: redis-data
        labels:
          app: redis
          release: postfacto
          heritage: Helm
          component: master
      spec:
        accessModes:
          - "ReadWriteOnce"
        resources:
          requests:
            storage: "8Gi"
  updateStrategy:
    type: RollingUpdate
