service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postfacto
  labels:
    app: postfacto
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: postfacto
