ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: postfacto-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: postfacto-address
    networking.gke.io/managed-certificates: postfacto-cert
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: postfacto
          servicePort: 80
